--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,14 @@ edition = "2021"
 
 [dependencies]
 # sqlite = "0.36.0"
-anyhow = "1.0.82"
+anyhow = "1.0.91"
 eframe = { version = "0.29.1", features = ["wgpu"] }
 env_logger = "0.11.3"
 log = "0.4.22"
 # ehttp = { version = "0.5.0", features = ["json"] }
-serde = { version = "1.0.203", features = ["derive"] }
+serde = { version = "1.0.213", features = ["derive"] }
 egui_extras = { version = "0.29.1", features = ["all_loaders"] }
 image = { version = "0.25", features = ["jpeg", "png"] }
-egui_tiles = { version = "0.10.1" }
 egui-phosphor = "0.7.3"
 egui-notify = "0.17.0"
+egui_dock = "0.14.0"
