--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,14 @@ anyhow = "1.0.91"
 eframe = { version = "0.29.1", features = ["wgpu"] }
 env_logger = "0.11.3"
 log = "0.4.22"
-# ehttp = { version = "0.5.0", features = ["json"] }
 serde = { version = "1.0.213", features = ["derive"] }
 egui_extras = { version = "0.29.1", features = ["all_loaders"] }
 image = { version = "0.25", features = ["jpeg", "png"] }
 egui-phosphor = "0.7.3"
 egui-notify = "0.17.0"
 egui_dock = "0.14.0"
+serde_json = "1.0.132"
+egui-wgpu = "0.29.1"
+
+[features]
+serde = []
