--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,18 +7,20 @@ edition = "2021"
 
 [dependencies]
 # sqlite = "0.36.0"
-anyhow = "1.0.91"
+anyhow = "1.0.93"
 eframe = { version = "0.29.1", features = ["wgpu"] }
 env_logger = "0.11.3"
 log = "0.4.22"
-serde = { version = "1.0.213", features = ["derive"] }
+# serde = { version = "1.0.214", features = ["derive"] } Trojan?
 egui_extras = { version = "0.29.1", features = ["all_loaders"] }
 image = { version = "0.25", features = ["jpeg", "png"] }
 egui-phosphor = "0.7.3"
 egui-notify = "0.17.0"
 egui_dock = "0.14.0"
-serde_json = "1.0.132"
+# serde_json = "1.0.132"
 egui-wgpu = "0.29.1"
+bevy = "0.14"
+bevy_egui = "0.30"
 
 [features]
 serde = []
